package edu.austral.ingsis.math;

import java.util.List;

public interface Function {

  public Double getResult();

  public String printFunction();

  public List<String> getVariables();
}
